Edge Lengths not displayed accurately. #33673

Closed
opened 2012-12-26 07:03:57 +01:00 by Phillip Baird · 3 comments

%%%Problem discovered while trying to layout a floor plan where 1 blender unit = 1 metre.
Edges lengths with same number of decimal places displayed differently.

Steps to reproduce:

  1. In Top view add a plane with dimensions 1 by 1, with front left vertex at 0,0.
  2. In Edit mode grab the right edge of the plane and move it 0.005 making the x dimension slightly longer. (G X . 0 0 5)
  3. Grab the back edge of the plane and move it forwards 0.005 making the y dimension slightly shorter. (G Y - . 0 0 5)
  4. Turn on display Edge Lengths.

The Dimensions of the plane are now 1.005 x 0.995 but these are not the displayed edge lengths.
The longer edge of 1.005 is displayed incorrectly as 1.
The shorter edge length 0.995 is displayed correctly.
The expected behaviour is that both edges have 3dp so the y dimension should have been displayed as 1.005 and not 1.

Example file atttached.

Blender 2.65a on Kubuntu 12.10 64bit.
%%%

%%%Problem discovered while trying to layout a floor plan where 1 blender unit = 1 metre. Edges lengths with same number of decimal places displayed differently. Steps to reproduce: 1. In Top view add a plane with dimensions 1 by 1, with front left vertex at 0,0. 2. In Edit mode grab the right edge of the plane and move it 0.005 making the x dimension slightly longer. (G X . 0 0 5) 3. Grab the back edge of the plane and move it forwards 0.005 making the y dimension slightly shorter. (G Y - . 0 0 5) 4. Turn on display Edge Lengths. The Dimensions of the plane are now 1.005 x 0.995 but these are not the displayed edge lengths. The longer edge of 1.005 is displayed incorrectly as 1. The shorter edge length 0.995 is displayed correctly. The expected behaviour is that both edges have 3dp so the y dimension should have been displayed as 1.005 and not 1. Example file atttached. Blender 2.65a on Kubuntu 12.10 64bit. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%The code was only drawing two numbers precision for values larger than 1. A bit strange... I've changed that to three now. :)

The precision is being controlled by grid size... all a bit dubious this. Will notify coder of this to tweak further.
%%%

%%%The code was only drawing two numbers precision for values larger than 1. A bit strange... I've changed that to three now. :) The precision is being controlled by grid size... all a bit dubious this. Will notify coder of this to tweak further. %%%
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33673
No description provided.